--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -7,5 +7,6 @@ parts:
     - file: some_content/overview.md
       sections:
       - file: some_content/text_and_code.ipynb
+    - file: p5einbinden.ipynb
     - file: bsp_parsons_problem.ipynb
     - file: references.md
