--- a/book/_config.yml
+++ b/book/_config.yml
@@ -1,6 +1,7 @@
-title: Template
-author: TeachBooks Team from Delft university of Technology, built with <a href="https://teachbooks.tudelft.nl/">TeachBooks</a> and <a href="https://jupyterbook.org/">Jupyter Book</a>, <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" rel="license noopener noreferrer"">CC BY 4.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" alt=""><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg" alt=""> #Add your own name here
-logo: figures/TUDelft_logo_rgb.png #add your own logo here
+title: Datenstrukturen & KI fürs TGI
+author: Michael Brenner, basierend auf <a href="https://teachbooks.tudelft.nl/">TeachBooks</a> und <a href="https://jupyterbook.org/">Jupyter Book</a>, <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" rel="license noopener noreferrer"">CC BY 4.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" alt=""><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg" alt=""> #Add your own name here
+copyright: 2024
+# logo: figures/TUDelft_logo_rgb.png #add your own logo here
 
 execute:
   execute_notebooks: "off"
@@ -29,6 +30,8 @@ sphinx:
   extra_extensions:
     - sphinx.ext.imgconverter
     - jupyterbook_patches
+  config:
+    language: de
 
 bibtex_bibfiles: 
   - references.bib
