--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -2,14 +2,23 @@ format: jb-book
 root: intro.md
 
 parts:
-  - caption: Contents
+  - caption: Nutzung   # Das wird Part 1 (Teile werden nicht nummeriert)
+    numbered: 2
     chapters:
+    - file: nutzung.md 
+    - file: live_code.ipynb
+  - caption: Beispielhafte Inhalte  Das wird Part 2
+    numbered: 3
+    chapters:
+    - file: problemloesen-und-suche/ueberblick-suche.md
+      sections:   # Die Sections sind dann eine Nummerierungsebene tiefer
+      - file: problemloesen-und-suche/Schiebepuzzle.ipynb
     - file: some_content/overview.md
       sections:
       - file: some_content/text_and_code.ipynb
+  - caption: Weitere Experimente
+    numbered: 2
+    chapters:
     - file: p5einbinden.ipynb
     - file: bsp_parsons_problem.ipynb
     - file: references.md
-    - file: problemloesen-und-suche/ueberblick-suche.md
-      sections:
-      - file: problemloesen-und-suche/Schiebepuzzle.ipynb
