--- a/book/_config.yml
+++ b/book/_config.yml
@@ -1,4 +1,4 @@
-title: Datenstrukturen und KI fürs TGI
+title: Datenstrukturen und KI
 author: Michael Brenner
 # copyright: 2024
 # logo: figures/TUDelft_logo_rgb.png #add your own logo here
