--- a/book/_config.yml
+++ b/book/_config.yml
@@ -1,6 +1,6 @@
 title: Datenstrukturen und KI
 author: Michael Brenner
-# copyright: 2024
+copyright: "2024"
 # logo: figures/TUDelft_logo_rgb.png #add your own logo here
 
 execute:
@@ -12,6 +12,10 @@ html:
   favicon : "figures/favicon.ico"
   baseurl :  "https://teachbooks.github.io/template/" #Replace this with your own URL
   home_page_in_navbar       : true
+  extra_footer: |
+        <div>
+            🤖
+        </div>
 
 sphinx:
   config:
@@ -22,6 +26,7 @@ sphinx:
       use_thebe_lite: true
       exclude_patterns: ["**/_*.yml", "**/*.md", "**/*.ipynb"]
     html_theme_options:
+      # home_page_in_toc: true
       repository_url: "https://github.com/TeachBooks/template" #add your own repo URL here
       use_repository_button: true
       use_issues_button : true
