--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -5,7 +5,7 @@ parts:
   - caption: Nutzung   # Das wird Part 1 (Teile werden nicht nummeriert)
     numbered: 2
     chapters:
-    - file: nutzung.md 
+    - file: live_code.ipynb
   - caption: Datenstrukturen  # Das wird Part 2
     numbered: 3
     chapters:
