--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -38,6 +38,8 @@ parts:
     chapters:
     - file: ki/ki_allgemein.ipynb
     - file: ki/knearestneighbor.ipynb
+      sections:
+      - file: ki/knearestneighbor2.ipynb
     - file: ki/kmeansclustering.ipynb
     - file: ki/entscheidungsbaumlernen.ipynb
     - file: ki/minimax.ipynb
