k-Means final Version bis Aufgabenblatt

--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,6 @@ tools_materialien_allerlei/kmeans/kmeansclustering_aufgabenblatt.aux
 tools_materialien_allerlei/kmeans/kmeansclustering_aufgabenblatt.fdb_latexmk
 tools_materialien_allerlei/kmeans/kmeansclustering_aufgabenblatt.fls
 tools_materialien_allerlei/kmeans/kmeansclustering_aufgabenblatt.synctex.gz
+tools_materialien_allerlei/kmeans/aufgabenblatt/kmeansclustering_aufgabenblatt.fdb_latexmk
+tools_materialien_allerlei/kmeans/aufgabenblatt/kmeansclustering_aufgabenblatt.fls
+tools_materialien_allerlei/kmeans/aufgabenblatt/kmeansclustering_aufgabenblatt.synctex.gz
