Tooltip und weitere Plugins

--- a/book/_config.yml
+++ b/book/_config.yml
@@ -22,6 +22,8 @@ html:
 parse:
   myst_enable_extensions: # default extensions to enable in the myst parser. See https://myst-parser.readthedocs.io/en/latest/using/syntax-optional.html
     - amsmath
+    - attrs_block
+    - attrs_inline # https://myst-parser.readthedocs.io/en/latest/syntax/optional.html#syntax-attributes-inline
     - colon_fence
     - deflist
     - dollarmath
@@ -31,6 +33,7 @@ parse:
     - replacements
     - smartquotes
     - substitution
+    - tasklist # https://myst-parser.readthedocs.io/en/latest/syntax/optional.html#syntax-attributes-inline
   myst_url_schemes: [ mailto, http, https ]
   myst_dmath_double_inline: true
 
@@ -57,6 +60,7 @@ sphinx:
   extra_extensions:
     - sphinx.ext.imgconverter
     - jupyterbook_patches
+    - teachbooks_sphinx_tippy
 
 bibtex_bibfiles: 
   - references.bib
