--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # first list the packages you wish to download from PyPI
 teachbooks # depends on jupyter-book
 # numpy
+teachbooks-sphinx-tippy
 
 # docutils version for reference page formatting
 docutils==0.17.1
