--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -43,7 +43,7 @@ parts:
       - file: ki/knearestneighbor2.ipynb
     - file: ki/kmeansclustering.ipynb
       sections:
-      - file: ki/kmeansclustering2.ipynb
+      - file: ki/kmeansclustering2_aufgabe.ipynb
       - file: ki/kmeansclustering2_loesung.ipynb
     - file: ki/entscheidungsbaumlernen.ipynb
     - file: ki/minimax.ipynb
