--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,5 @@ tools_materialien_allerlei/kmeans/kmeansclustering_aufgabenblatt.synctex.gz
 tools_materialien_allerlei/kmeans/aufgabenblatt/kmeansclustering_aufgabenblatt.fdb_latexmk
 tools_materialien_allerlei/kmeans/aufgabenblatt/kmeansclustering_aufgabenblatt.fls
 tools_materialien_allerlei/kmeans/aufgabenblatt/kmeansclustering_aufgabenblatt.synctex.gz
+tools_materialien_allerlei/python2pseudocode.ipynb
+tools_materialien_allerlei/ermittle_häufigkeiten.ipynb
